manifests/unpoller/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unpoller
  namespace: unpoller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: unpoller
  ingress:
  # Prometheus
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "9130"
        protocol: TCP
  egress:
  # Unifi-controller
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": unifi-controller
        app.kubernetes.io/name: unifi
      toPorts:
    - ports:
      - port: "8443"
        protocol: TCP
